# cpp-rocket-sim

./: .gitignore  CMakeLists.txt  README.md  debug_solver  imgui.ini  test_runner  test_smart_guidance  test_sprint2  verify_smart
src/: main.cpp
src/core/: AeroComponent.h  AtmosphereModel.cpp  ControlSystem.h  DumbArtillery.cpp  DumbArtillery.h  GuidanceUnit.cpp  IProjectile.h  LaunchAngleSolver.cpp  LaunchAngleSolver.h  LaunchConfig.h  NavigationSystem.h  PropulsionSystem.cpp  PropulsionSystem.h  RocketSimApp.cpp  RocketSimApp.h  SimulationWorld.cpp  SimulationWorld.h  SmartArtillery.cpp  SmartArtillery.h  StateVector.h
src/guidance/: ControlSystem.cpp  GuidanceConfig.h  GuidanceUnit.h  NavigationSystem.cpp
src/physics/: AeroComponent.cpp  AeroComponent.h  AtmosphereModel.h  MassProperties.cpp  MassProperties.h  PropulsionSystem.h
src/rendering/: Camera.h  Renderer.h  RocketSimApp.cpp  RocketSimApp.h
src/simulation/: DumbArtillery.h  SimulationWorld.cpp  SimulationWorld.h  SmartArtillery.cpp  SmartArtillery.h
src/utils/: LaunchAngleSolver.cpp
src/visualization/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
tests/: debug_solver.cpp  test_runner.cpp  test_smart_guidance.cpp  test_sprint2.cpp  verify_smart_targeting.cpp
